--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_form_builder: ^7.7.0
   form_builder_validators: ^8.3.0
   image_picker: ^0.8.6
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   flutter_test:
