--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -58,6 +58,17 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  fonts:
+    - family: IBMPlexSansThai
+      fonts:
+        - asset: fonts/IBMPlexSansThai-Medium.ttf
+          weight: 500
+        - asset: fonts/IBMPlexSansThai-Regular.ttf
+          weight: 400
+        - asset: fonts/IBMPlexSansThai-Light.ttf
+          weight: 300
+        - asset: fonts/IBMPlexSansThai-Bold.ttf
+          weight: 600
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
