--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^0.8.6
   flutter_colorpicker: ^1.0.3
   tab_container: ^2.0.0
+  firebase_storage: ^10.3.11
 
 dev_dependencies:
   flutter_test:
